# rowdle

./: Cargo.toml  README.md
examples/: loldle.rs  numberdle.rs  wordle.rs  wordle_tui.rs
src/: error.rs  guesser.rs  lib.rs
