[package]
name = "rowdle"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["wordle", "game", "cli"]
description = "A Wordle backend in Rust"
categories = ["game-logic", "cli"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.61"

[dev-dependencies]
random_word = { version = "0.4.3", features = ["en"] }
ratatui = "0.27.0"
rand = "0.8.4"
