[package]
name = "rowdle"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["wordle", "game", "cli"]
description = "A Wordle backend in Rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.61"

[dev-dependencies]
random_word = { version = "0.4.3", features = ["en"] }
ratatui = "0.27.0"
rand = "0.8.4"
